--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ anyio==4.12.0
 asgiref==3.11.0
 certifi==2026.1.4
 distro==1.9.0
+dj-database-url==3.1.0
 Django==6.0.1
 djangorestframework==3.16.1
 docx2txt==0.9
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -14,6 +16,7 @@ jiter==0.12.0
 lxml==6.0.2
 numpy==2.4.0
 openai==2.14.0
+packaging==25.0
 pgvector==0.4.2
 psycopg==3.3.2
 psycopg-binary==3.3.2
@@ -27,3 +30,4 @@ sqlparse==0.5.5
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+whitenoise==6.11.0
